--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -20,5 +20,7 @@ application:
         expiration: ###
 server:
   port: ###
+  servlet:
+    context-path: /pss/module_name
 
 useExpiringMapToBlackListAccessToken: false
