--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/pss
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://localhost:5432/pss_inventory
+    username: admin
+    password: admin
   data:
     redis:
       host: localhost
