--- a/sales-service/src/main/resources/application.yml
+++ b/sales-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/pss_sales
+    url: jdbc:postgresql://postgres-sql:5432/pss_sales
     username: admin
     password: admin
     driver-class-name: org.postgresql.Driver
