--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "5432:5432"
     networks:
-      - postgres
+      - pss
     restart: unless-stopped
 
   pgadmin:
@@ -26,16 +26,8 @@ services:
     ports:
       - "5050:80"
     networks:
-      - postgres
+      - pss
     restart: unless-stopped
-  dcs-service:
-    build: ./dcs-service
-    ports:
-      - "8084:8084"
-    depends_on:
-      - postgres
-    networks:
-      - postgres
 
   ipa-service:
     build: ./ipa-service
@@ -44,16 +36,7 @@ services:
     depends_on:
       - postgres
     networks:
-      - postgres
-
-  reporting-service:
-    build: ./reporting-service
-    ports:
-      - "8083:8083"
-    depends_on:
-      - postgres
-    networks:
-      - postgres
+      - pss
 
   sales-service:
     build: ./sales-service
@@ -61,12 +44,41 @@ services:
       - "8082:8082"
     depends_on:
       - postgres
+      - ipa-service
     networks:
+      - pss
+
+  reporting-service:
+    build: ./reporting-service
+    ports:
+      - "8083:8083"
+    depends_on:
       - postgres
+      - ipa-service
+      - sales-service
+    networks:
+      - pss
+
+  dcs-service:
+    build: ./dcs-service
+    ports:
+      - "8084:8084"
+    depends_on:
+      - postgres
+      - ipa-service
+      - sales-service
+    networks:
+      - pss
+
+
+
+
+
+
 
 
 networks:
-  postgres:
+  pss:
     driver: bridge
 
 volumes:
