--- a/dcs-service/src/main/resources/application.yml
+++ b/dcs-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://postgres-sql:5432/pss_dcs
+    url: jdbc:postgresql://localhost:5432/pss_dcs
     username: admin
     password: admin
     driver-class-name: org.postgresql.Driver
