--- a/dcs-service/src/main/resources/application-dev.yml
+++ b/dcs-service/src/main/resources/application-dev.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: 123456
+    url: jdbc:postgresql://localhost:5432/pss_dcs
+    username: admin
+    password: admin
   data:
     redis:
       host: localhost
