update application-dev.yml for logback classpath

--- a/dcs-service/src/main/resources/application.yml
+++ b/dcs-service/src/main/resources/application.yml
@@ -16,3 +16,5 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   cache:
     type: redis
+  main:
+    log-config: classpath:logback-spring.xml
