--- a/ipa-service/src/main/resources/application-dev.yml
+++ b/ipa-service/src/main/resources/application-dev.yml
@@ -12,6 +12,18 @@ spring:
   jpa:
     show-sql: true
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ### your gmail
+    password: ### your gmail app password
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
 application:
   security:
     jwt:
