--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
 			<version>3.4.14</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-envers</artifactId>
+		</dependency>
+
 		<!--		<dependency>-->
 		<!--			<groupId>org.springframework.cloud</groupId>-->
 		<!--			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
