--- a/ipa-service/src/main/resources/application-dev.yml
+++ b/ipa-service/src/main/resources/application-dev.yml
@@ -15,8 +15,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ### your gmail
-    password: ### your gmail app password
+    username: # your gmail
+    password: # app password
     properties:
       mail:
         smtp:
@@ -31,6 +31,9 @@ application:
       expiration: 86400000 # a day
       refresh-token:
         expiration: 604800000 # 7 days
+  reset-password:
+    validity: 5 # 5 min
+  host-mail: habib11wahid@gmail.com
 
 
 springdoc:
