dev config fixed

--- a/ipa-service/src/main/resources/application-dev.yml
+++ b/ipa-service/src/main/resources/application-dev.yml
@@ -31,6 +31,9 @@ application:
       expiration: 86400000 # a day
       refresh-token:
         expiration: 604800000 # 7 days
+  reset-password:
+    validity: 5
+  host-mail: ## host mail
 
 
 springdoc:
