--- a/ipa-service/src/main/resources/application-dev.yml
+++ b/ipa-service/src/main/resources/application-dev.yml
@@ -15,8 +15,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ### your gmail
-    password: ### your gmail app password
+    username: noreply.pss.technonext@gmail.com
+    password: kqaldxtcjaorjazm
     properties:
       mail:
         smtp:
@@ -33,7 +33,7 @@ application:
         expiration: 604800000 # 7 days
   reset-password:
     validity: 5
-  host-mail: ## host mail
+  host-mail: noreply.pss.technonext@gmail.com
 
 
 springdoc:
