--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,12 @@
 			<version>3.4.14</version>
 		</dependency>
 
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>7.2</version>
+		</dependency>
+
 		<!--		<dependency>-->
 		<!--			<groupId>org.springframework.cloud</groupId>-->
 		<!--			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
