--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,11 @@
 			<artifactId>spring-data-envers</artifactId>
 		</dependency>
 
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+
 		<!--		<dependency>-->
 		<!--			<groupId>org.springframework.cloud</groupId>-->
 		<!--			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
