--- a/ipa-service/src/main/resources/application-dev.yml
+++ b/ipa-service/src/main/resources/application-dev.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/pss_ipa
-    username: admin
-    password: admin
+    username: postgres
+    password: postgres
     data:
       redis:
         host: localhost
@@ -47,5 +47,8 @@ springdoc:
 server:
   port: 8080
 
+multitenancy:
+  http:
+    header-name: X-TENANT-ID
 
 useExpiringMapToBlackListAccessToken: true
