--- a/ipa-service/src/main/resources/application.yml
+++ b/ipa-service/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  liquibase:
+    enabled: false
+    default-schema: usba
   application:
     name: pss-ipa
   profiles:
@@ -6,6 +9,8 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
   jpa:
+    hibernate:
+      ddl-auto: update
     show-sql: ${jpa.show-sql}
     properties:
       hibernate:
