--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<spring-cloud.version>2022.0.1</spring-cloud.version>
 		<springdoc.version>2.1.0</springdoc.version>
 		<jjwt.version>0.11.5</jjwt.version>
+		<data-source-proxy-version>1.9.0</data-source-proxy-version>
 	</properties>
 
 	<modules>
@@ -149,6 +150,12 @@
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
         </dependency>
+
+		<dependency>
+			<groupId>com.github.gavlyukovskiy</groupId>
+			<artifactId>datasource-proxy-spring-boot-starter</artifactId>
+			<version>${data-source-proxy-version}</version>
+		</dependency>
 
 		<!--		<dependency>-->
 		<!--			<groupId>org.springframework.cloud</groupId>-->
