Return user id, username during login

--- a/ipa-service/src/main/resources/application-dev.yml
+++ b/ipa-service/src/main/resources/application-dev.yml
@@ -55,9 +55,9 @@ multitenancy:
 
 useExpiringMapToBlackListAccessToken: true
 
-logging:
-  level:
-    net:
-      ttddyy:
-        dsproxy:
-          listener: debug
+#logging:
+#  level:
+#    net:
+#      ttddyy:
+#        dsproxy:
+#          listener: debug
