--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,12 @@
 			<artifactId>spring-data-envers</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>net.lbruun.springboot</groupId>
+			<artifactId>preliquibase-spring-boot-starter</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
