remove email data repository fetch in async method

--- a/ipa-service/src/main/resources/application-dev.yml
+++ b/ipa-service/src/main/resources/application-dev.yml
@@ -5,8 +5,8 @@ spring:
     change-log: classpath:db/changelog/db.changelog-master.xml
   datasource:
     url: jdbc:postgresql://localhost:5432/pss_ipa
-    username: postgres
-    password: postgres
+    username: admin
+    password: admin
     data:
       redis:
         host: localhost
