--- a/ipa-service/pom.xml
+++ b/ipa-service/pom.xml
@@ -18,6 +18,14 @@
 		<java.version>17</java.version>
 	</properties>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>jakarta.mail</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<finalName>${project.artifactId}-${project.version}</finalName>
 		<plugins>
