add otp log delete job and job config

--- a/ipa-service/src/main/resources/application.yml
+++ b/ipa-service/src/main/resources/application.yml
@@ -16,6 +16,11 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   cache:
     type: redis
+  batch:
+    jdbc:
+      initialize-schema: always
+    job:
+      enabled: false
 
 
 
